# eo-identifiers

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: common_parsers.rs  from_str.rs  lib.rs
src/identifiers/: landsat.rs  mod.rs  modis.rs  planet.rs  sentinel1.rs  sentinel2.rs  sentinel3.rs  tests.rs
testdata/: landsat_products.txt  sentinel1_products.txt  sentinel2_products.txt  sentinel3_products.txt  sentinel5p_products.txt
